--- a/Styles/index.css
+++ b/Styles/index.css
@@ -5,8 +5,30 @@ html {
 body {
   max-width: 1800px;
   width: 100%;
+  background-color: white;
+  margin: 0 auto;
 }
 
 .container {
   min-height: 100vh;
+}
+
+.landing-page {
+  background-image: url(../Images/landing-pageBG.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
