--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -5,8 +5,21 @@ html{
 body{
     max-width: 1800px;
     width: 100%;
+    background-color: white;
+    margin: 0 auto;
 }
 
 .container{
     min-height: 100vh;
+}
+
+.landing-page{
+    background-image: url(../Images/landing-pageBG.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
