--- a/Styles/index.css
+++ b/Styles/index.css
@@ -18,6 +18,8 @@ body {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  color: #FFFFFF;
+  font-family: "Josefin Sans", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -31,4 +33,66 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+}
+.landing-page h1 {
+  max-width: 342px;
+  width: 100%;
+  height: 26px;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 48px;
+  line-height: 26px;
+  letter-spacing: 4.8px;
+  text-transform: uppercase;
+  margin: 15px;
+}
+.landing-page h2 {
+  letter-spacing: 6.82px;
+  font-size: 22px;
+  line-height: 118%;
+  text-align: center;
+  font-weight: 400;
+}
+.landing-page form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  padding: 2px;
+  background-color: white;
+  max-width: 650px;
+  width: 100%;
+  height: 63px;
+  margin: 30px;
+  text-align: center;
+}
+.landing-page form input {
+  -webkit-box-flex: 2;
+      -ms-flex-positive: 2;
+          flex-grow: 2;
+  border: none;
+  height: 63px;
+}
+.landing-page form button {
+  background: #5474FD;
+  max-width: 153px;
+  border: 2px solid #FFFFFF;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #FFFFFF;
+  font-family: "Aleo", serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 26px;
+}
+.landing-page .scroll {
+  max-width: 108px;
+  width: 100%;
+  height: 46px;
+  margin: 30px;
+  text-align: center;
 }
