--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -1,3 +1,10 @@
+$main-font: 'Josefin Sans', sans-serif;
+$secondary-font: 'Aleo', serif;
+$main-font-color: #FFFFFF;
+
+
+
+
 html{
     background-color: #f3f3f3;
 }
@@ -18,8 +25,81 @@ body{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+    color: $main-font-color;
+    font-family: $main-font;
+
+
+    // positioning
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+
+
+    h1{ 
+        max-width: 342px;
+        width: 100%;
+        height: 26px;
+        font-style: normal;
+        font-weight: bold;
+        font-size: 48px;
+        line-height: 26px;
+        letter-spacing: 4.8px;
+        text-transform: uppercase;
+        margin: 15px;
+    }
+
+    h2{
+        letter-spacing: 6.82px;
+        font-size: 22px;
+        line-height: 118%;
+        text-align: center;
+        font-weight: 400;
+    }
+
+    form {
+        display:flex;
+        flex-direction:row;
+        // border:1px solid grey;
+        padding:2px;
+        background-color: white;
+        max-width: 650px;
+        width: 100%;
+        // height: fit-content;
+        height: 63px;
+        margin: 30px;
+        text-align: center;
+
+        input {
+            flex-grow:2;
+            border:none;
+            height: 63px;
+
+            
+          }
+
+          button{
+            background: #5474FD;
+            max-width: 153px;
+            border: 2px solid #FFFFFF;
+            box-sizing: border-box;
+            color: $main-font-color;
+            font-family: $secondary-font;
+            text-transform: uppercase;
+            font-weight: 400;
+            font-size: 14px;
+            line-height: 26px;
+            
+
+          }
+      }
+
+      .scroll{
+          max-width: 108px; 
+          width: 100%;
+          height: 46px;
+          margin: 30px;
+          text-align: center;
+      }
+
 }
