--- a/Styles/index.css
+++ b/Styles/index.css
@@ -96,3 +96,24 @@ body {
   margin: 30px;
   text-align: center;
 }
+
+nav {
+  width: 100%;
+  height: 10vh;
+  background-color: #5474FD;
+}
+nav li {
+  float: right;
+  margin: 15px;
+}
+nav a {
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  font-family: "Aleo", serif;
+  text-align: center;
+}
+nav .logo {
+  float: left;
+  text-align: center;
+}
