--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -1,6 +1,7 @@
 $main-font: 'Josefin Sans', sans-serif;
 $secondary-font: 'Aleo', serif;
 $main-font-color: #FFFFFF;
+$accent-color: #5474FD;
 
 
 
@@ -101,5 +102,28 @@ body{
           margin: 30px;
           text-align: center;
       }
-
 }
+
+    nav{
+        width: 100%;
+        height: 10vh;
+        background-color: $accent-color;
+
+        li{ 
+            float: right;
+            margin: 15px;
+        }
+
+        a{
+            text-decoration: none;
+            text-transform: uppercase;
+            color: $main-font-color;
+            font-family: $secondary-font;
+            text-align: center;
+        }
+
+        .logo{
+            float: left;
+            text-align: center;
+        }
+    }
