--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -108,10 +108,12 @@ body{
         width: 100%;
         height: 10vh;
         background-color: $accent-color;
+        position: sticky;
+        top: 0;
 
         li{ 
             float: right;
-            margin: 15px;
+            margin: 30px;
         }
 
         a{
@@ -125,5 +127,27 @@ body{
         .logo{
             float: left;
             text-align: center;
+            font-family: Josefin Sans;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 26px;
+            margin: 30px;
         }
+    }
+
+    .choose{
+        color: $main-font-color;
+        font-family: $main-font;
+
+        .choose1{
+            min-height: 685px;
+            background-image: url(../Images/chooseBG.png);
+        }
+
+        .choose2{
+            min-height: 340px;
+            background-color: #333333;
+        }
+
     }
