--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -82,7 +82,6 @@ body{
           button{
             background: #5474FD;
             max-width: 153px;
-            border: 2px solid #FFFFFF;
             box-sizing: border-box;
             color: $main-font-color;
             font-family: $secondary-font;
@@ -90,6 +89,7 @@ body{
             font-weight: 400;
             font-size: 14px;
             line-height: 26px;
+            border: none;
             
 
           }
@@ -108,8 +108,8 @@ body{
         width: 100%;
         height: 10vh;
         background-color: $accent-color;
-        position: sticky;
-        top: 0;
+        position: fixed;
+        bottom: 0;
 
         li{ 
             float: right;
@@ -143,6 +143,12 @@ body{
         .choose1{
             min-height: 685px;
             background-image: url(../Images/chooseBG.png);
+            background-repeat: no-repeat;
+            background-size: cover;
+            display: flex;
+            flex-flow: row wrap;
+            align-items: center;
+            justify-content: space-around;
         
             .choose-text{
                 display: flex;
@@ -164,6 +170,33 @@ body{
                     line-height: 26px;
                     letter-spacing: 1.6px;
                     color: #E8E8E8;
+                    margin: 15px;
+                }
+
+                button{
+                    background: #5474FD;
+                    max-width: 228px;
+                    min-height: 63px;
+                    box-sizing: border-box;
+                    color: $main-font-color;
+                    font-family: $secondary-font;
+                    text-transform: uppercase;
+                    font-weight: 400;
+                    font-size: 16px;
+                    line-height: 26px;
+                    letter-spacing: 1.2px;
+                    margin: 15px;
+                    border: none;
+                }
+
+            }
+
+            .choose-images{
+                display: flex;
+                flex-direction: column;
+
+                img{
+                    margin: 10px;
                 }
             }
         
