--- a/Styles/index.css
+++ b/Styles/index.css
@@ -101,8 +101,8 @@ nav {
   width: 100%;
   height: 10vh;
   background-color: #5474FD;
-  position: fixed;
-  bottom: 0;
+  position: sticky;
+  top: 0;
 }
 nav li {
   float: right;
@@ -207,4 +207,57 @@ nav .logo {
 .choose .choose2 {
   min-height: 340px;
   background-color: #333333;
+}
+
+.spain .spain_1 {
+  min-height: 700px;
+  background-image: url(../Images/spain-condos.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.spain .spain_2 {
+  min-height: 700px;
+  background-image: url(../Images/spain-mountain.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.spain .spain_info {
+  max-width: 550px;
+  width: 100%;
+  min-height: 374px;
+  background-color: #232323;
+  opacity: 0.9;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #FFFFFF;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.button {
+  background: #5474FD;
+  max-width: 228px;
+  min-height: 63px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  color: #FFFFFF;
+  font-family: "Aleo", serif;
+  text-transform: uppercase;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 1.2px;
+  margin: 15px;
+  border: none;
 }
