--- a/Styles/index.css
+++ b/Styles/index.css
@@ -101,8 +101,9 @@ nav {
   width: 100%;
   height: 10vh;
   background-color: #5474FD;
-  position: sticky;
-  top: 0;
+  position: fixed;
+  bottom: 0;
+  z-index: 1;
 }
 nav li {
   float: right;
@@ -230,6 +231,7 @@ nav .logo {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   color: #FFFFFF;
+  font-family: "Josefin Sans", sans-serif;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -237,17 +239,28 @@ nav .logo {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  padding: 30px;
+}
+.spain .spain_info h3 {
+  font-size: 20px;
+  line-height: 26px;
+  letter-spacing: 1.5px;
+  color: #E8E8E8;
+}
+.spain .spain_info p {
+  color: #E8E8E8;
 }
 
 .button {
   background: #5474FD;
   max-width: 228px;
+  width: 100%;
   min-height: 63px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
