--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -108,8 +108,9 @@ body{
         width: 100%;
         height: 10vh;
         background-color: $accent-color;
-        position: sticky;
-        top: 0;
+        position: fixed;
+        bottom: 0;
+        z-index: 1;
 
         li{ 
             float: right;
@@ -236,18 +237,35 @@ body{
         opacity: 0.9;
         box-sizing: border-box;
         color:$main-font-color;
+        font-family: $main-font;
         display: flex;
         flex-direction: column;
-        justify-content: center;
-        align-items: center;
+        justify-content: space-evenly;
+        align-items: flex-start;
+        padding: 30px;
+        // margin: 25px;
+
+        h3{
+            font-size: 20px;
+            line-height: 26px;
+            letter-spacing: 1.5px;
+            color: #E8E8E8;
+        }
+
+        p{
+            color: #E8E8E8;
+        }
 
     }
+
+   
 }
 
 .button{
     
         background: #5474FD;
         max-width: 228px;
+        width: 100%;
         min-height: 63px;
         box-sizing: border-box;
         color: $main-font-color;
