--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -17,6 +17,43 @@ body{
     margin: 0 auto;
 }
 
+header{
+
+    nav{
+        width: 100%;
+        height: 10vh;
+        background-color: $accent-color;
+        position: fixed;
+        bottom: 0;
+        z-index: 1;
+
+        li{ 
+            float: right;
+            margin: 30px;
+        }
+
+        a{
+            text-decoration: none;
+            text-transform: uppercase;
+            color: $main-font-color;
+            font-family: $secondary-font;
+            text-align: center;
+        }
+
+        .logo{
+            float: left;
+            text-align: center;
+            font-family: Josefin Sans;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 24px;
+            line-height: 26px;
+            margin: 30px;
+        }
+    }
+
+}
+
 .container{
     min-height: 100vh;
 }
@@ -104,38 +141,6 @@ body{
       }
 }
 
-    nav{
-        width: 100%;
-        height: 10vh;
-        background-color: $accent-color;
-        position: fixed;
-        bottom: 0;
-        z-index: 1;
-
-        li{ 
-            float: right;
-            margin: 30px;
-        }
-
-        a{
-            text-decoration: none;
-            text-transform: uppercase;
-            color: $main-font-color;
-            font-family: $secondary-font;
-            text-align: center;
-        }
-
-        .logo{
-            float: left;
-            text-align: center;
-            font-family: Josefin Sans;
-            font-style: normal;
-            font-weight: bold;
-            font-size: 24px;
-            line-height: 26px;
-            margin: 30px;
-        }
-    }
 
 .choose{
     color: $main-font-color;
@@ -218,8 +223,6 @@ body{
         background-image: url(../Images/spain-condos.png);
         background-repeat: no-repeat;
         background-size: cover;
-
-        
     }
 
     .spain_2{
@@ -252,13 +255,28 @@ body{
             color: #E8E8E8;
         }
 
+        h2{
+            font-size: 20px;
+            line-height: 26px;
+            text-transform: uppercase;
+        }
+
         p{
             color: #E8E8E8;
+            font-size: 16px;
+            line-height: 26px;
         }
 
     }
 
    
+}
+
+.what{
+    min-height: 731px;
+    background-image: url(../Images/whatBG.png);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .button{
