--- a/Styles/index.css
+++ b/Styles/index.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #f3f3f3;
+  background-color: #333333;
 }
 
 body {
@@ -7,6 +7,8 @@ body {
   width: 100%;
   background-color: white;
   margin: 0 auto;
+  color: #FFFFFF;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 header nav {
@@ -265,10 +267,91 @@ header nav .logo {
 }
 
 .what {
-  min-height: 731px;
   background-image: url(../Images/whatBG.png);
   background-repeat: no-repeat;
   background-size: cover;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  font-family: "Josefin Sans", sans-serif;
+  color: #fefefe;
+}
+.what_heading {
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  line-height: 26px;
+  text-align: center;
+  margin: 30px;
+  padding: 15px;
+}
+.what_content {
+  max-width: 1100px;
+  width: 100%;
+  background-color: #333333;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+.what_content h4 {
+  font-size: 20px;
+  line-height: 26px;
+  text-transform: uppercase;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+.what_content i {
+  color: #5474FD;
+  font-size: 36px;
+  line-height: 26px;
+}
+.what_content p {
+  color: #E8E8E8;
+  font-size: 16px;
+  line-height: 26px;
+}
+.what_info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  padding: 25px;
+  margin: 20px;
+}
+
+footer {
+  min-height: 271px;
+  background-color: #232323;
+}
+footer h2 {
+  font-size: 24px;
+  line-height: 26px;
+  letter-spacing: 3.36px;
+  text-transform: uppercase;
 }
 
 .button {
