--- a/Styles/index.css
+++ b/Styles/index.css
@@ -346,12 +346,30 @@ header nav .logo {
 footer {
   min-height: 271px;
   background-color: #232323;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 footer h2 {
   font-size: 24px;
   line-height: 26px;
   letter-spacing: 3.36px;
   text-transform: uppercase;
+}
+footer h3 {
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 1.6px;
 }
 
 .button {
