--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -337,6 +337,10 @@ header{
 footer{
     min-height: 271px;
     background-color: #232323;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 
     h2{
         font-size: 24px;
@@ -345,7 +349,11 @@ footer{
         text-transform: uppercase;
     }
 
-
+    h3{
+        font-size: 16px;
+        line-height: 26px;
+        letter-spacing: 1.6px;
+    }
 }
 
 .button{
