--- a/Styles/index.css
+++ b/Styles/index.css
@@ -95,7 +95,7 @@ header nav .logo {
           flex-direction: row;
   padding: 2px;
   background-color: white;
-  max-width: 650px;
+  max-width: 700px;
   width: 100%;
   height: 63px;
   margin: 30px;
@@ -107,6 +107,7 @@ header nav .logo {
           flex-grow: 2;
   border: none;
   height: 63px;
+  max-width: 503px;
 }
 .landing-page form button {
   background: #5474FD;
@@ -210,6 +211,23 @@ header nav .logo {
 .choose .choose2 {
   min-height: 340px;
   background-color: #333333;
+  font-size: 36px;
+  line-height: 26px;
+  color: #E8E8E8;
+  text-align: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+.choose .choose2 img {
+  padding-bottom: 10px;
+  margin: 15px;
 }
 
 .spain .spain_1 {
@@ -388,4 +406,14 @@ footer h3 {
   letter-spacing: 1.2px;
   margin: 15px;
   border: none;
+}
+
+a:hover {
+  color: hotpink;
+}
+
+.button:hover {
+  background-color: hotpink;
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
 }
