--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -103,7 +103,7 @@ header{
         // border:1px solid grey;
         padding:2px;
         background-color: white;
-        max-width: 650px;
+        max-width: 700px;
         width: 100%;
         // height: fit-content;
         height: 63px;
@@ -114,6 +114,7 @@ header{
             flex-grow:2;
             border:none;
             height: 63px;
+            max-width: 503px;
           }
 
           button{
@@ -210,6 +211,18 @@ header{
     .choose2{
         min-height: 340px;
         background-color: #333333;
+        font-size: 36px;
+        line-height: 26px;
+        color: #E8E8E8;
+        text-align: center;
+        display: flex;
+        align-items: center;
+        justify-content: space-evenly;
+
+        img{
+            padding-bottom: 10px;
+            margin: 15px;
+        }
     }
 
 }
@@ -375,4 +388,12 @@ footer{
     
     }
 
+    a:hover{
+        color: hotpink;
+    }
+
+    .button:hover{
+        background-color: hotpink;
+        transform: scale(1.1);
+    }
 
