--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -267,6 +267,15 @@ header{
 
 .spain{
 
+    .spain-content{
+        width: 50%;
+        min-height: 700px;
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        justify-content: center;
+    }
+
     .spain_1{
         min-height: 700px;
         background-image: url(../Images/spain-condos.png);
@@ -295,7 +304,7 @@ header{
         justify-content: space-evenly;
         align-items: flex-start;
         padding: 30px;
-        // margin: 25px;
+        // margin: 30px;
 
         h3{
             font-size: 20px;
@@ -398,12 +407,18 @@ footer{
         line-height: 26px;
         letter-spacing: 3.36px;
         text-transform: uppercase;
+        text-align: center;
     }
 
     h3{
         font-size: 16px;
         line-height: 26px;
         letter-spacing: 1.6px;
+    }
+
+    a{
+        text-decoration: none;
+        color: $main-font-color;
     }
 }
 
