--- a/Styles/index.css
+++ b/Styles/index.css
@@ -33,7 +33,7 @@ header nav a {
 header nav .logo {
   float: left;
   text-align: center;
-  font-family: Josefin Sans;
+  font-family: "Josefin Sans", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
