--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -45,7 +45,7 @@ header{
         .logo{
             float: left;
             text-align: center;
-            font-family: Josefin Sans;
+            font-family: $main-font;
             font-style: normal;
             font-weight: bold;
             font-size: 24px;
