--- a/Styles/index.css
+++ b/Styles/index.css
@@ -144,8 +144,15 @@ header nav .logo {
   height: 46px;
   margin: 30px;
   text-align: center;
+}
+.landing-page .scroll a {
   font-size: 14px;
   line-height: 26px;
+  text-decoration: none;
+  color: #FFFFFF;
+}
+.landing-page .scroll a:hover {
+  color: hotpink;
 }
 
 .choose {
@@ -408,6 +415,41 @@ header nav .logo {
   color: #E8E8E8;
   font-size: 16px;
   line-height: 26px;
+}
+@media screen and (max-width: 800px) {
+  .what .choose1 {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    padding: 25px;
+    margin: 25px;
+  }
+  .what .choose2 {
+    font-size: 22px;
+  }
+  .what .what_content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding: 25px;
+  }
 }
 .what_info {
   display: -webkit-box;
