--- a/Styles/index.scss
+++ b/Styles/index.scss
@@ -102,12 +102,10 @@ header{
     form {
         display:flex;
         flex-direction:row;
-        // border:1px solid grey;
         padding:2px;
         background-color: white;
         max-width: 700px;
         width: 100%;
-        // height: fit-content;
         height: 63px;
         margin: 30px;
         text-align: center;
@@ -156,9 +154,21 @@ header{
           height: 46px;
           margin: 30px;
           text-align: center;
-          font-size: 14px;
-        line-height: 26px;
+          
+
+            a{
+            font-size: 14px;
+            line-height: 26px;
+            text-decoration: none;
+            color: $main-font-color;
+          }
+
+          a:hover{
+              color: hotpink;
+          }
       }
+
+      
 }
 
 
@@ -317,7 +327,6 @@ header{
         justify-content: space-evenly;
         align-items: flex-start;
         padding: 30px;
-        // margin: 30px;
 
         h3{
             font-size: 20px;
@@ -344,7 +353,6 @@ header{
 }
 
 .what{
-    // min-height: 731px;
     background-image: url(../Images/whatBG.png);
     background-repeat: no-repeat;
     background-size: cover;
@@ -394,6 +402,30 @@ header{
             
         }
 
+    }
+
+    @media screen and (max-width:800px){
+
+        .choose1{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 25px;
+            margin: 25px;
+        }
+
+        .choose2{
+            font-size: 22px;
+        }
+
+        .what_content{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            padding: 25px;
+        }
+        
     }
 
     &_info{
